Prevent layout shift when avatar hovering

--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -637,31 +637,31 @@ figure#avatar-thumbnail figcaption {
   transform: translateY(.1ex);
 }
 
+.avatar-small:hover {
+  transform: scale(6);
+  border-radius: 0%;
+}
+
 .avatar-small {
   height: 1.5rem;
   width: 1.5rem;
   border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
   display: inline-block;
   margin-bottom: -5px;
   margin-top: -5px;
   vertical-align: middle;
   margin: 0;
   margin-right: 5px;
-  object-fit: cover;
-  object-position: center;
-  transition: transform .2s .3s ease;
+  transition: all .2s .3s ease;
   cursor: zoom-in;
+  transform-origin: top left;
 }
 
-.avatar-small:hover {
+div.links>.avatar-small:hover {
   transform: scale(6);
-  border-radius: 0;
-  outline: 1px solid #ffffffde;
-  height: auto;
-  position: relative;
-  z-index: 1;
 }
-
 
 a.feed, a.feed:visited {
   color: #dc3545;
